Refactor Java lookup